--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       on-profile: local
   datasource:
     hikari:
-      jdbc-url: jdbc:mysql://localhost:3306/pill?useUnicode=true&characterEncoding=utf8
+      jdbc-url: jdbc:mysql://localhost:3307/pill?useUnicode=true&characterEncoding=utf8
       username: root
       password: 1111
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -20,3 +20,19 @@ spring:
         show_sql: true
     hibernate:
       ddl-auto: create
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_KEY}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+    auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30분
