--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,16 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.28.9",
+    "@types/react": "~18.2.45",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
-    "zustand": "^4.5.2",
     "typescript": "^5.3.0",
-    "@types/react": "~18.2.45"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
