--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
