--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.28.9",
     "@types/react": "~18.2.45",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-camera": "~14.1.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
@@ -22,8 +24,7 @@
     "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0",
-    "zustand": "^4.5.2",
-    "expo-camera": "~14.1.2"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
