--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 
 	// JWT Token
 	implementation 'io.jsonwebtoken:jjwt:0.12.3'
+
+	//테스트에서 lombok 사용
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
