--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
