--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,20 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.28.9",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-camera": "~14.1.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-camera": "~15.0.9",
+    "expo-image-picker": "~15.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
-    "react-native": "0.73.6",
-    "react-native-svg": "14.1.0",
+    "react-native": "0.74.1",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0",
-    "zustand": "^4.5.2",
-    "expo-image-picker": "~14.7.1"
+    "typescript": "~5.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
