--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
     "typescript": "~5.3.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-secure-store": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
