feat: navigation bar clear

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -36,7 +36,8 @@
           "recordAudioAndroid": true
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-router"
     ]
   }
 }
