--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.28.9",
@@ -16,17 +17,21 @@
     "axios": "^1.6.8",
     "expo": "^51.0.8",
     "expo-camera": "~15.0.9",
+    "expo-constants": "~16.0.2",
     "expo-image-picker": "~15.0.5",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
-    "typescript": "~5.3.3",
-    "zustand": "^4.5.2",
-    "expo-secure-store": "~13.0.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
