--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.3.0",
+    "typescript": "~5.3.3",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.2"
   },
